<?xml version="1.0"?>
<package>
  <name>ur5e_basic</name>
  <version>0.1.0</version>
  <description> ur_control test  </description>
  <maintainer email="yang@gmail.com">yang</maintainer>
  <author>yang</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>rviz</build_depend>
  <run_depend>rviz</run_depend>

</package>
